# cinnamon-search-tool

./: NEWS  autogen.sh  configure.ac  gnome-search-tool.doap
data/: Makefile.am  cinnamon-search-tool.1  cinnamon-search-tool.convert  cinnamon-search-tool.desktop.in  gnome-search-tool.desktop.in  org.cinnamon.cinnamon-search-tool.gschema.xml.in  org.gnome.gnome-search-tool.gschema.xml.in
help/: Makefile.am
help/C/: index.docbook
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fi/: fi.po
help/fr/: fr.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/te/: te.po
libeggsmclient/: eggdesktopfile.c  eggdesktopfile.h  eggsmclient.c
libgnomeui-deprecated/: gsearchtool-entry.c  gsearchtool-entry.h
po/: POTFILES.in  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  (+50 more)
src/: Makefile.am  gsearchtool-callbacks.c  gsearchtool-callbacks.h  gsearchtool-support.c  gsearchtool-support.h  gsearchtool.c  gsearchtool.h
